# src/main/java/com/ogrizkov/movieticket/dto/ShowtimeDto.java
@@ -1,0 +1,17 @@
+package com.ogrizkov.movieticket.dto;
+
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.AllArgsConstructor;
+import java.time.LocalDateTime;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class ShowtimeDto {
+    private Long id;
+    private Long movieId;
+    private Long theaterId;
+    private LocalDateTime startTime;
+    private LocalDateTime endTime;
+}
