# src/main/java/com/ogrizkov/movieticket/model/Showtime.java
@@ -1,32 +1,34 @@
 package com.ogrizkov.movieticket.model;
 
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 
 import java.time.LocalDateTime;
+import java.util.List;
 
 @Entity
-@Table(name = "showtimes")
-@Getter @Setter @NoArgsConstructor @AllArgsConstructor
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode(exclude = {"movie", "theater"})
+@ToString(exclude = {"movie", "theater"})
 public class Showtime {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
     @ManyToOne
-    @JoinColumn(name = "movie_id", nullable = false)
     private Movie movie;
 
     @ManyToOne
-    @JoinColumn(name = "theater_id", nullable = false)
     private Theater theater;
 
-    @Column(nullable = false)
     private LocalDateTime startTime;
-
-    @Column(nullable = false)
     private LocalDateTime endTime;
+
+    @ElementCollection
+    @CollectionTable(name = "showtime_seats")
+    private List<List<Boolean>> seats;
+
+    private Integer availableSeats;
 }
